--- a/wp-content/themes/trek-travel-theme/src/scss/_pdp.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_pdp.scss
@@ -40,14 +40,23 @@
         margin-top: 40px;
         margin-bottom: 0;
     }
-
+    
     @include media-breakpoint-up(md) {
-        padding: 60px 72px 0 72px;
+        padding: 60px 28px 0 28px;
+
+        &__divider {
+            margin-top: 50px;
+        }
+    }
+    
+    @include media-breakpoint-up(lg) {
+        padding: 60px 70px 0 70px;
 
         &__divider {
             margin-top: 60px;
         }
     }
+   
 }
 
 // Import PDP section and components
