Ttucker pdp update (#290)
* sing in register wording

* pdp all months year annd styles

* pdp hw and pdp dates styling wip

* pdp date status styles

* pdp date status styles 2

* pdp navigation desktop commented js padding

* pdp copntainer sizing

* container sizing breakpoint

* pdp itinerary icons wip

* pdp itinerary icons complete

* pdp and itinerary hw activity version changes complete

* pdp and itinerary booking form updates

---------

Co-authored-by: AzureAD\TimTucker <tim_tucker@trektravel.com>

--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-rider-information.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-rider-information.scss
@@ -85,12 +85,15 @@
                     width: 100%;
                 }
                 .rider-heading {
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
                     font-family: 'Roboto';
                     font-size: 18px;
                     line-height: 28px;
                     .miles-img {
                         font-size: 20px;
-                        color: $blue;
+                        // color: $blue;
                         margin-right: 10px;
                         min-width: 20px;
                     }
