--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -12842,7 +12842,23 @@ a.refineLink {
   visibility: hidden;
 }
 
-.pdp-content-section.hw #testimonials .card {
+.pdp-section#rider-information i, .pdp-section#inclusions i, .pdp-section#itinerary i {
+  font-family: "Font Awesome 6 Pro";
+  color: #28AAE1;
+}
+.pdp-section#inclusions i {
+  font-size: 50px;
+}
+.pdp-section.hw#testimonials .card {
+  border-color: #6B9214;
+}
+.pdp-section.hw#rider-information i, .pdp-section.hw#inclusion i, .pdp-section.hw#itinerary i {
+  color: #6B9214;
+}
+.pdp-section.hw#additional-details .additional-details {
+  background-color: #EDF9D3;
+}
+.pdp-section.hw#inclusions .tab-pane .d-flex .right-div .gratuities_description {
   border-color: #6B9214;
 }
 
@@ -13398,8 +13414,23 @@ a.refineLink {
   margin: 0.5rem auto;
 }
 .trip-wows-container ul {
-  list-style-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1303_4503)'%3E%3Crect width='16' height='16' fill='white'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M4.58497 0.25456C4.25589 -0.0539515 3.75419 -0.085604 3.38895 0.179102C3.02371 0.443808 2.89763 0.930432 3.08838 1.33919L6.19676 8L3.08838 14.6608C2.89763 15.0696 3.02371 15.5562 3.38895 15.8209C3.75419 16.0856 4.25589 16.054 4.58497 15.7454L12.1144 8.68663C12.3042 8.5087 12.4118 8.26015 12.4118 8C12.4118 7.73985 12.3042 7.49131 12.1144 7.31338L4.58497 0.25456Z' fill='%2328AAE1'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1303_4503'%3E%3Crect width='16' height='16' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
+  list-style: none;
   padding-left: 1.25rem;
+}
+.trip-wows-container ul li {
+  position: relative;
+}
+.trip-wows-container ul li::before {
+  content: "\f0da";
+  font-family: "Font Awesome 6 Pro";
+  font-weight: 700;
+  font-size: 20px;
+  position: absolute;
+  left: -1.25rem;
+  color: #6B9214;
+}
+.trip-wows-container ul li.tt-blue::before {
+  color: #28AAE1;
 }
 .trip-wows-container .wow-image {
   width: 100%;
@@ -13530,13 +13561,15 @@ a.refineLink {
   }
 }
 #rider-information .tab-pane .row-miles .miles .rider-heading {
+  display: flex;
+  align-items: center;
+  gap: 10px;
   font-family: "Roboto";
   font-size: 18px;
   line-height: 28px;
 }
 #rider-information .tab-pane .row-miles .miles .rider-heading .miles-img {
   font-size: 20px;
-  color: #28AAE1;
   margin-right: 10px;
   min-width: 20px;
 }
@@ -14671,6 +14704,13 @@ nav .nav-tabs .nav-link.active {
   margin-top: 48px;
   margin-bottom: 96px;
   padding: 0 20px;
+}
+.itinerary-details#itinerary i {
+  font-family: "Font Awesome 6 Pro";
+  color: #28AAE1;
+}
+.itinerary-details.hw#itinerary i {
+  color: #6B9214;
 }
 .itinerary-details .tour-actions {
   margin-top: 24px;
