--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-itinerary.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-itinerary.scss
@@ -236,6 +236,25 @@
     margin-top: 48px;
     margin-bottom: 96px;
     padding: 0 20px;
+
+    &#itinerary {
+
+        i {
+            font-family: 'Font Awesome 6 Pro';
+            color: $blue;
+        }
+
+    }
+    
+    &.hw {
+        &#itinerary {
+            i {
+                color: $tt-green;
+            }
+        }
+
+    }
+
     .tour-actions{
         margin-top: 24px;
         margin-bottom: 40px;
