--- a/wp-content/themes/trek-travel-theme/src/scss/_variables.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_variables.scss
@@ -423,6 +423,11 @@ $spacers: (
   3: $spacer * .75,
   4: $spacer,
   5: $spacer * 1.25,
+  20: $spacer * 2,
+  30: $spacer * 3,
+  40: $spacer * 4,
+  50: $spacer * 5,
+  60: $spacer * 6,
 );
 // scss-docs-end spacer-variables-maps
 
