Ttucker pdp update (#298)
* sing in register wording

* pdp all months year annd styles

* pdp hw and pdp dates styling wip

* pdp date status styles

* pdp date status styles 2

* pdp navigation desktop commented js padding

* pdp branch master merge

* hw landing structure

* hw structure and styles 1

* pdp copntainer sizing

* container sizing breakpoint

* hw landing repeater wip

* htags class color

* hw landing complete

* nocap folder

* tpl part comma

* folder rename part1

* folder rename part2

* cta blog

* cta blog ugh

* hw acf fix

* pdp itinerary icons wip

* pdp itinerary icons complete

* pdp and itinerary hw activity version changes complete

* pdp and itinerary booking form updates

* hw landing edits

* inc img cover

* PLP hw badge and hike icon

* acf btn manual link

* acf btn manual link fix

* acf btn manual link fixy

--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -14434,6 +14434,9 @@ a.refineLink {
 .archive .ais-InfiniteHits-list {
   padding: 0;
 }
+.archive .ais-InfiniteHits-list .card-body span.badge.hw {
+  background-color: #6B9214 !important;
+}
 
 @media (max-width: 767px) {
   li.ais-InfiniteHits-item .card-body {
