--- a/wp-content/themes/trek-travel-theme/src/scss/_search.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_search.scss
@@ -511,6 +511,12 @@ a.refineLink {
 .archive {
     .ais-InfiniteHits-list {
         padding: 0;
+
+        .card-body span{
+           &.badge.hw {
+            background-color: $tt-green !important;
+           }
+        }
     }
 }
 @media (max-width: 767px) {
