--- a/wp-content/themes/trek-travel-theme/src/scss/_plp-hero.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_plp-hero.scss
@@ -2,10 +2,23 @@
     background-color: #F4F4F4;
     .banner-section{
         position: relative;
+        text-shadow: 2px 2px 0px rgba(0,0,0,0.6);
+
+        &:before {
+            content: '';
+            height: 100%;
+            width: 100%;
+            position: absolute;
+            background: linear-gradient(180deg, rgba(244, 244, 244, 0) 70%, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 0.45) 100%);
+        }
+
         img{
             // height: 200px;
-            aspect-ratio: 7/3;
+            // aspect-ratio: 7/3;
+            min-height: 33vh;
             object-fit: cover;
+            max-height: 850px;
+            height: 80vw;
         }
         p, h1{
             position: absolute;
