Bugfix/record bike locking (#334)
* Bike and Checklist Locking: add function to store the statuses
make a function to store the statuses in the user's meta based on NS registration ID
Asana Task: https://app.asana.com/0/1205472772784381/1207087092357592/f

* Bike and Checklist Locking: add function to check the statuses
make a function to read and return the statuses from the user's meta
Asana Task: https://app.asana.com/0/1205472772784381/1207087092357592/f

* Bike and Checklist Locking: add function to fetch the modified registrations from NS
get the modified registrations for the given period in the past
Asana Task: https://app.asana.com/0/1205472772784381/1207087092357592/f

* Bike and Checklist Locking: refactor the CRON job function that check for modified registrations
make to use the new function for statuses, fix mistake in the logs
Asana Task: https://app.asana.com/0/1205472772784381/1207087092357592/f

* Bike and Checklist Locking: use new check in post-booking for bike locking and checklist locking

Asana Task: https://app.asana.com/0/1205472772784381/1207087092357592/f

* Bike and Checklist Locking: make bike and checklist locked  status check, during the sync process
refactor the function, that store the statuses, to can take data from given parameter
Asana Task: https://app.asana.com/0/1205472772784381/1207087092357592/f

* Bike and Checklist Locking: add option in admin panel to sync all guest registartions
clear old dx repair tools, make a hidden section for dx repair tools, and add an option to read all guest registrations from db and fix locking statuses
Asana Task: https://app.asana.com/0/1205472772784381/1207087092357592/f

* Admin panel style: align hidden button with text below

---------

Co-authored-by: Petyo Lazarov <plazarov@devrix.com>

--- a/wp-content/plugins/trek-travel-netsuite-integration/assets/ttnsw-styles.css
+++ b/wp-content/plugins/trek-travel-netsuite-integration/assets/ttnsw-styles.css
@@ -280,3 +280,13 @@ table.table-old.tt-booking-table .expandable-cell.expanded .expand-cell:before {
     -webkit-transform: translate(-50%,-50%) rotate(-135deg);
     transform: translate(-50%,-50%) rotate(-135deg);
 }
+#dx-repair-tools{
+    display: none;
+}
+.dx-show-hidden {
+    opacity: 0;
+}
+.dx-show-hidden:hover {
+    opacity: 1;
+    cursor: pointer;
+}
