Ttucker pdp update (#341)
* pdp no date pro race

* pdp no dates

* pdp no dates class

---------

Co-authored-by: smetodiev@devrix.com (28172) <client_smetodiev@ohio-trektravel.vps.pagelyhosting.com>

--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -15440,6 +15440,19 @@ a.refineLink {
     margin-left: 2rem;
   }
 }
+.dates-pricing-container .dates-pricing .pdp-no-date {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  width: 80%;
+  margin: auto;
+}
+@media (max-width: 991.98px) {
+  .dates-pricing-container .dates-pricing .pdp-no-date {
+    width: 100%;
+  }
+}
 .dates-pricing-container .dates-pricing nav {
   margin-bottom: 20px;
 }
