--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-dates-pricing.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-dates-pricing.scss
@@ -34,6 +34,20 @@
         }
     }
     .dates-pricing{
+
+        .pdp-no-date {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 15px;
+            width: 80%;
+            margin: auto;
+
+            @include media-breakpoint-down(lg) {
+                width: 100%;
+            } 
+        }
+
         nav {
             margin-bottom: 20px;
 
