Ttucker pdp update (#348)
* sidebar nav

---------

Co-authored-by: smetodiev@devrix.com (28172) <client_smetodiev@ohio-trektravel.vps.pagelyhosting.com>

--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -15019,7 +15019,7 @@ a.refineLink {
 }
 .overview-sidebar-desktop .nav-link:hover, .overview-sidebar-desktop .nav-link:focus {
   color: #000000;
-  font-weight: bold;
+  text-shadow: 0px 0px 1px black;
 }
 
 .overview-menu-mobile {
