--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-overview-navigation.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-overview-navigation.scss
@@ -54,6 +54,6 @@
     }
     .nav-link:hover, .nav-link:focus{
         color: #000000;
-        font-weight: bold;
+        text-shadow:0px 0px 1px black;
     }
 }
