--- a/wp-content/themes/trek-travel-theme/src/scss/_forms.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_forms.scss
@@ -247,10 +247,12 @@
 
     >i.toggle {
         position: absolute;
-        z-index: 4;
+        z-index: 1;
         right: 1rem;
-        top: 0.5rem;
+        top: 0;
+        bottom: 0;
         color: $black;
+        align-content: center;
     }
 
     .title,
@@ -268,7 +270,7 @@
         position: absolute;
         left: 0px;
         top: 0px;
-        z-index: 1;
+        z-index: 4;
         width: 100%;
         height: 100%;
         display: block;
